fixed lots current price for auction-detail.html

--- a/templates/pages/auction-detail.html
+++ b/templates/pages/auction-detail.html
@@ -22,7 +22,8 @@
                             <p class="action_item_text">Адрес проведения: {{ auct.adress }}</p>
                             <p class="action_item_text">Количество лотов: {{ auct.count_lots }}</p>
                             <p class="action_item_text">Оценочная стоимость: {{ auct.assessed_value }}</p>
-                            <p class="action_item_text">Текущая цена лота: {{ auct.lot_current_price }}</p>
+                            <p class="action_item_text">Стартовая стоимость: {{ auct.start_price_lot }}</p>
+                            <p class="action_item_text">Цена продажи: {{ auct.lot_selling_price }}</p>
 <!--                            <p class="action_item_text">Карта:</p>-->
 <!--                            <iframe src="{{ auct.map }}" frameborder="0"></iframe>-->
                         </div>
