fixed lots current price for auction-detail.html added Lots model

--- a/templates/pages/auctions.html
+++ b/templates/pages/auctions.html
@@ -26,7 +26,7 @@ rel="stylesheet"
     <div class="container">
         <main class="content">
             <div class="gallery-page">
-                <h1 style="margin-bottom: 20px;">{% trans "Календарь проведения аукционов" %}</h1>
+                <h1 style="margin-bottom: 20px;">{% trans "Auctions" %}</h1>
                 <div class="filter-content">
                     <ul class="filters">
                         <li class="title">
