fixed size pictures and added sum for lots price

--- a/templates/pages/auction-detail.html
+++ b/templates/pages/auction-detail.html
@@ -35,9 +35,33 @@
                             <div class="action_item_info">
                                 <p class="action_item_text"><b>{% trans 'Номер лота №' %}</b> {{ lot.number_lot }}</p>
                                 <p class="action_item_text"><b>{% trans 'Автор:' %}</b> {{ lot.author }}</p>
-                                <p class="action_item_text"><b>{% trans 'Оценочная стоимость:' %}</b> {{ lot.assessed_value }}</p>
-                                <p class="action_item_text"><b>{% trans 'Стартовая стоимость:' %}</b> {{ lot.start_price_lot }}</p>
-                                <p class="action_item_text"><b>{% trans 'Цена продажи:' %}</b> {{ lot.lot_selling_price }}</p>
+                                <p class="action_item_text"><b>{% trans 'Оценочная стоимость:' %}</b> {{ lot.assessed_value }}
+                                    {% if LANGUAGE_CODE == 'ru' %}
+                                    сум
+                                    {% elif LANGUAGE_CODE == 'uz' %}
+                                    so'm
+                                    {% else %}
+                                    sum
+                                    {% endif %}
+                                </p>
+                                <p class="action_item_text"><b>{% trans 'Стартовая стоимость:' %}</b> {{ lot.start_price_lot }}
+                                    {% if LANGUAGE_CODE == 'ru' %}
+                                    сум
+                                    {% elif LANGUAGE_CODE == 'uz' %}
+                                    so'm
+                                    {% else %}
+                                    sum
+                                    {% endif %}
+                                </p>
+                                <p class="action_item_text"><b>{% trans 'Цена продажи:' %}</b> {{ lot.lot_selling_price }}
+                                    {% if LANGUAGE_CODE == 'ru' %}
+                                    сум
+                                    {% elif LANGUAGE_CODE == 'uz' %}
+                                    so'm
+                                    {% else %}
+                                    sum
+                                    {% endif %}
+                                </p>
                                 <p class="action_item_text">{{ lot.description|safe }}</p>
                             </div>
                         </div>
