--- a/templates/pages/gallery.html
+++ b/templates/pages/gallery.html
@@ -1,7 +1,7 @@
 <div class="container" id="mygallery">
     {% for rand in rand_works %}
         <a href="{% url 'general:catalog_detail_page' rand.slug %}" title="{{ rand.name }}">
-            <img loading="lazy" width="240" height="300" src="{{ rand.thumbnail.url }}" alt="{{ rand.name }}"/>
+            <img loading="lazy" width="240" height="300" src="{{ rand.photo.url }}" alt="{{ rand.name }}"/>
             <div class="description">
                 <div>
                     <strong>{{ rand.name }}</strong>
