--- a/templates/pages/catalog-detail.html
+++ b/templates/pages/catalog-detail.html
@@ -227,7 +227,7 @@
                             <div class="card">
                                 <div class="info">
                                     <a href="{% url 'general:catalog_detail_page' other.slug %}" title="{{ other.name }}" class="img ">
-                                        <img src="{{ other.thumbnail.url }}" alt="{{ other.name }}"/>
+                                        <img src="{{ other.photo.url }}" alt="{{ other.name }}"/>
                                     </a>
                                     <div class="caption">
                                         <strong><a
