--- a/templates/pages/artists-detail.html
+++ b/templates/pages/artists-detail.html
@@ -50,7 +50,7 @@
                             {% for work in works %}
                                 <div class="card">
                                     <a href="{% url 'general:catalog_detail_page' work.slug %}" title="{{ work.name }}" class="img h360">
-                                        <img width="300px" height="270px" src="{{ work.thumbnail.url }}" alt="{{ work.name }}"/>
+                                        <img width="300px" height="270px" src="{{ work.photo.url }}" alt="{{ work.name }}"/>
                                     </a>
                                     <div class="caption">
                                         <strong><a href="{% url 'general:catalog_detail_page' work.slug %}">{{ work.name }}</a></strong>
@@ -77,7 +77,7 @@
                         {% for work in applied_arts %}
                                 <div class="card">
                                     <a href="{% url 'general:catalog_detail_page' work.slug %}" class="img h360">
-                                        <img src="{{ work.thumbnail.url }}" alt=""/>
+                                        <img src="{{ work.photo.url }}" alt=""/>
                                     </a>
                                     <div class="caption">
                                         <strong><a
@@ -110,7 +110,7 @@
                             {% for artist in artists %}
                                 <div class="card">
                                     <a href="{% url 'general:artists_detail_page' artist.id %}" class="img h360">
-                                        <img src="{{ artist.thumbnail.url }}" alt=""/>
+                                        <img src="{{ artist.photo.url }}" alt=""/>
                                     </a>
                                     <div class="caption">
                                         <strong><a
