try to fix error thumbnail

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -88,5 +88,5 @@
             </span>
         </div>
     </div>
-    <div class="copy"><a target="_blank" href="http://linkedbits.uz">Linked Bits</a><script>document.write(new Date().getFullYear());</script></div>
+    <div class="copy"><a target="_blank" href="https://t.me/WEBadiko">WEBadiko</a><script>document.write(new Date().getFullYear());</script></div>
 </footer>
