--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -82,7 +82,7 @@
                                                     </svg>
                                                     {{ work.country.name }}
                                                 </span>
-                                                <span class="size">{% trans "Размер:" %} {{ work.size }} {% trans "Материал:" %} {{ work.material }}</span>
+                                                <span class="size">{% trans "Размер:" %} {{ work.sizes.width }}x{{ work.sizes.height }} {% trans "Материал:" %} {{ work.material }}</span>
                                             </div>
 {#                                            <a href="#" class="favorite" data-add-url="add" data-remove-url="remove"#}
 {#                                               data-id="">#}
