added MDB5 and added functionality for publishing house

--- a/templates/pages/customer_order_detail.html
+++ b/templates/pages/customer_order_detail.html
@@ -3,7 +3,7 @@
 {#{% block title %} Order Detail {% endblock %}#}
 {##}
 {#{% block content %}#}
-{#<div class ='container'>#}
+{#<div class =''>#}
 {#    <div class ='row'>#}
 {#        <div class ='col-md-8 mx-auto'>#}
 {#            <h3> Order Detail</h3><hr>#}
