--- a/templates/pages/sell.html
+++ b/templates/pages/sell.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 <div class="wrapper">
-    <div class="container">
+    <div class="">
         {% include 'header.html' with cart_items=cart_items country_name=country_name%}
         <div class="auth-wrapper">
             <h1>{% trans "Запрос на продажу культурных ценностей" %}</h1>
