--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7254,3 +7254,23 @@ iframe{
         width: 100vw
     }
 }
+
+@media (min-width: 767px){
+    .card_img{
+        position: relative;
+    }
+
+    .card_img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+
+.img_news img {
+    max-width: 100%;
+    margin: 50px auto;
+}
