--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,22 @@
 {% url 'general:profile_page' as profile %}
 {% url 'general:sell_page' as sell %}
 
+<!-- Font Awesome -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+rel="stylesheet"
+/>
+
 <div class="mobile mobile-header" xmlns:general="http://www.w3.org/1999/xhtml">
     <div id="burger" class="burger">
         <span></span>
@@ -78,6 +94,60 @@
 </div>
 <header>
     <div class="center">
+        <div class="header-actions desktop d-flex">
+                <form method="get" action="{% url 'general:search' %}" title="Введите больше трех символов для поиска">
+                    <span class="helper">{% trans "Введите больше 3х символов для корректного поиска"%}</span>
+                    <label>
+                        <input class="searchHandler" placeholder="" type="text" value="" name="search"/>
+                    </label>
+                    <button type="submit" disabled aria-label="{% trans "Искать на art-v" %}">
+                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.50001 1.92307e-08C7.74357 -2.6747e-05 8.96103 0.356669 10.008 1.02777C11.0549 1.69886 11.8873 2.65619 12.4065 3.78618C12.9257 4.91616 13.1099 6.17136 12.9371 7.40286C12.7644 8.63435 12.242 9.79046 11.432 10.734L17.076 16.378L16.369 17.085L10.724 11.44C9.92789 12.1208 8.97901 12.5991 7.95819 12.8342C6.93737 13.0693 5.87486 13.0542 4.86114 12.7901C3.84743 12.5261 2.91255 12.021 2.13612 11.3178C1.3597 10.6146 0.764725 9.73412 0.401886 8.75143C0.0390466 7.76874 -0.0809124 6.71291 0.0522255 5.67387C0.185363 4.63483 0.567654 3.64336 1.16654 2.7839C1.76542 1.92444 2.56315 1.22246 3.4918 0.73774C4.42044 0.253018 5.45248 -8.05521e-05 6.50001 1.92307e-08ZM6.50001 1C5.04132 1 3.64238 1.57946 2.61093 2.61091C1.57948 3.64236 1.00001 5.04131 1.00001 6.5C1.00001 7.95869 1.57948 9.35764 2.61093 10.3891C3.64238 11.4205 5.04132 12 6.50001 12C7.9587 12 9.35765 11.4205 10.3891 10.3891C11.4206 9.35764 12 7.95869 12 6.5C12 5.04131 11.4206 3.64236 10.3891 2.61091C9.35765 1.57946 7.9587 1 6.50001 1Z"
+                                  fill="#8E8E8E"/>
+                        </svg>
+                    </button>
+                </form>
+                {% if request.user.is_authenticated %}
+                    <a href="{{ profile }}" class="user" title="Кабинет">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
+                            <path id="person.svg" class="cls-1"
+                                  d="M1613.32,158.285a4.18,4.18,0,1,1,4.18,4.191A4.184,4.184,0,0,1,1613.32,158.285Zm8.18,4.839a6.27,6.27,0,1,0-8,0A11.233,11.233,0,0,0,1606,174h2.09a9.41,9.41,0,1,1,18.82,0H1629A11.233,11.233,0,0,0,1621.5,163.124Z"
+                                  transform="translate(-1606 -152)"/>
+                        </svg>
+                    </a>
+                {% else %}
+                    <a href="{% url 'accounts:login' %}" title="Авторизация" class="user">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
+                            <path id="person.svg" class="cls-1"
+                                  d="M1613.32,158.285a4.18,4.18,0,1,1,4.18,4.191A4.184,4.184,0,0,1,1613.32,158.285Zm8.18,4.839a6.27,6.27,0,1,0-8,0A11.233,11.233,0,0,0,1606,174h2.09a9.41,9.41,0,1,1,18.82,0H1629A11.233,11.233,0,0,0,1621.5,163.124Z"
+                                  transform="translate(-1606 -152)"/>
+                        </svg>
+                    </a>
+                {% endif %}
+                {% if request.user.is_authenticated %}
+
+                    <a href="{% url 'general:favorites_page' %}" title="Избранные" class="favorite">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
+                            <path d="M1590.16,166.1v0.011h0v0.075l-0.27.2L1580.5,176h0l-9.39-9.618-0.27-.2v-0.075h0V166.1a7.352,7.352,0,0,1,.23-9.979,6.915,6.915,0,0,1,4.99-2.117h0a6.921,6.921,0,0,0,8.88,0h0a6.915,6.915,0,0,1,4.99,2.117A7.352,7.352,0,0,1,1590.16,166.1Zm-0.28-5.607a4.384,4.384,0,0,0-.14-0.494,4.963,4.963,0,0,0-.15-0.533c-0.06-.155-0.15-0.3-0.22-0.446a3.689,3.689,0,0,0-.26-0.518,4.616,4.616,0,0,0-.33-0.432c-0.11-.146-0.21-0.3-0.33-0.436a5.036,5.036,0,0,0-7.43,0l-0.52.556h0l-0.52-.556a5.036,5.036,0,0,0-7.43,0c-0.12.136-.22,0.29-0.33,0.436a4.616,4.616,0,0,0-.33.432,3.689,3.689,0,0,0-.26.518c-0.07.149-.16,0.291-0.22,0.446a4.963,4.963,0,0,0-.15.533,4.384,4.384,0,0,0-.14.494c-0.03.175-.03,0.353-0.05,0.529a4.748,4.748,0,0,0-.05.53c0,0.173.03,0.344,0.04,0.516s0.02,0.365.05,0.545a4.346,4.346,0,0,0,.13.5c0.05,0.179.08,0.361,0.14,0.535a4.486,4.486,0,0,0,.23.467,4.9,4.9,0,0,0,.24.5c0.09,0.15.21,0.284,0.31,0.426a4.874,4.874,0,0,0,.34.443l0.27,0.17v0.125l7.73,7.237,7.73-7.237v-0.125l0.27-.17a4.874,4.874,0,0,0,.34-0.443c0.1-.142.22-0.276,0.31-0.426a4.9,4.9,0,0,0,.24-0.5,4.486,4.486,0,0,0,.23-0.467c0.06-.174.09-0.356,0.14-0.535a4.346,4.346,0,0,0,.13-0.5c0.03-.18.03-0.363,0.05-0.545s0.04-.343.04-0.516a4.748,4.748,0,0,0-.05-0.53C1589.91,160.842,1589.91,160.664,1589.88,160.489Z"
+                                  transform="translate(-1569 -154)"/>
+                        </svg>
+                    </a>
+                    <a href="{% url 'general:cart_page' %}" title="Корзина" class="basket">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 22">
+                            <path d="M1655.99,156.1h2.41l4.96,12.947a1.035,1.035,0,0,0,.97.672h10.43a1.043,1.043,0,0,0,.97-0.659l4.17-10.476a1.052,1.052,0,0,0-.97-1.436h-13.55v2.095h12.01l-3.34,8.381h-9l-4.96-12.948a1.036,1.036,0,0,0-.97-0.671h-3.13V156.1Zm7.3,17.81a2.085,2.085,0,1,1,2.09,2.095A2.089,2.089,0,0,1,1663.29,173.905Zm8.34,0a2.085,2.085,0,1,1,2.09,2.095A2.1,2.1,0,0,1,1671.63,173.905Z"
+                                  transform="translate(-1656 -154)"/>
+                        </svg>
+                        <span class="counter">
+                            {% if cart_items %}
+                                {{ cart_items }}
+                            {% else %}
+                                0
+                            {% endif %}
+                        </span>
+                    </a>
+                {% endif %}
+
+            </div>
         <div class="logo">
             <a href="{{ home }}">ART VERNISSAGE</a>
         </div>
@@ -163,6 +233,11 @@
                             </ul>
                         {% endif %}
                     </li>
+                    <li>
+                        <a href="{% url 'general:publishing_house' %}">
+                            {% trans 'Издательский дом' %}
+                        </a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" {% if request.path == services %} class="active" {% endif %}>{% trans "Услуги" %}
                         </a>
@@ -186,61 +261,6 @@
 
                 </ul>
             </nav>
-            <div class="header-actions desktop">
-                <form method="get" action="{% url 'general:search' %}" title="Введите больше трех символов для поиска">
-                    <span class="helper">{% trans "Введите больше 3х символов для корректного поиска"%}</span>
-                    <label>
-                        <input class="searchHandler" placeholder="" type="text" value="" name="search"/>
-                    </label>
-                    <button type="submit" disabled aria-label="{% trans "Искать на art-v" %}">
-                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M6.50001 1.92307e-08C7.74357 -2.6747e-05 8.96103 0.356669 10.008 1.02777C11.0549 1.69886 11.8873 2.65619 12.4065 3.78618C12.9257 4.91616 13.1099 6.17136 12.9371 7.40286C12.7644 8.63435 12.242 9.79046 11.432 10.734L17.076 16.378L16.369 17.085L10.724 11.44C9.92789 12.1208 8.97901 12.5991 7.95819 12.8342C6.93737 13.0693 5.87486 13.0542 4.86114 12.7901C3.84743 12.5261 2.91255 12.021 2.13612 11.3178C1.3597 10.6146 0.764725 9.73412 0.401886 8.75143C0.0390466 7.76874 -0.0809124 6.71291 0.0522255 5.67387C0.185363 4.63483 0.567654 3.64336 1.16654 2.7839C1.76542 1.92444 2.56315 1.22246 3.4918 0.73774C4.42044 0.253018 5.45248 -8.05521e-05 6.50001 1.92307e-08ZM6.50001 1C5.04132 1 3.64238 1.57946 2.61093 2.61091C1.57948 3.64236 1.00001 5.04131 1.00001 6.5C1.00001 7.95869 1.57948 9.35764 2.61093 10.3891C3.64238 11.4205 5.04132 12 6.50001 12C7.9587 12 9.35765 11.4205 10.3891 10.3891C11.4206 9.35764 12 7.95869 12 6.5C12 5.04131 11.4206 3.64236 10.3891 2.61091C9.35765 1.57946 7.9587 1 6.50001 1Z"
-                                  fill="#8E8E8E"/>
-                        </svg>
-                    </button>
-                </form>
-                {% if request.user.is_authenticated %}
-                    <a href="{{ profile }}" class="user" title="Кабинет">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
-                            <path id="person.svg" class="cls-1"
-                                  d="M1613.32,158.285a4.18,4.18,0,1,1,4.18,4.191A4.184,4.184,0,0,1,1613.32,158.285Zm8.18,4.839a6.27,6.27,0,1,0-8,0A11.233,11.233,0,0,0,1606,174h2.09a9.41,9.41,0,1,1,18.82,0H1629A11.233,11.233,0,0,0,1621.5,163.124Z"
-                                  transform="translate(-1606 -152)"/>
-                        </svg>
-                    </a>
-                {% else %}
-                    <a href="{% url 'accounts:login' %}" title="Авторизация" class="user">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
-                            <path id="person.svg" class="cls-1"
-                                  d="M1613.32,158.285a4.18,4.18,0,1,1,4.18,4.191A4.184,4.184,0,0,1,1613.32,158.285Zm8.18,4.839a6.27,6.27,0,1,0-8,0A11.233,11.233,0,0,0,1606,174h2.09a9.41,9.41,0,1,1,18.82,0H1629A11.233,11.233,0,0,0,1621.5,163.124Z"
-                                  transform="translate(-1606 -152)"/>
-                        </svg>
-                    </a>
-                {% endif %}
-                {% if request.user.is_authenticated %}
-
-                    <a href="{% url 'general:favorites_page' %}" title="Избранные" class="favorite">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22">
-                            <path d="M1590.16,166.1v0.011h0v0.075l-0.27.2L1580.5,176h0l-9.39-9.618-0.27-.2v-0.075h0V166.1a7.352,7.352,0,0,1,.23-9.979,6.915,6.915,0,0,1,4.99-2.117h0a6.921,6.921,0,0,0,8.88,0h0a6.915,6.915,0,0,1,4.99,2.117A7.352,7.352,0,0,1,1590.16,166.1Zm-0.28-5.607a4.384,4.384,0,0,0-.14-0.494,4.963,4.963,0,0,0-.15-0.533c-0.06-.155-0.15-0.3-0.22-0.446a3.689,3.689,0,0,0-.26-0.518,4.616,4.616,0,0,0-.33-0.432c-0.11-.146-0.21-0.3-0.33-0.436a5.036,5.036,0,0,0-7.43,0l-0.52.556h0l-0.52-.556a5.036,5.036,0,0,0-7.43,0c-0.12.136-.22,0.29-0.33,0.436a4.616,4.616,0,0,0-.33.432,3.689,3.689,0,0,0-.26.518c-0.07.149-.16,0.291-0.22,0.446a4.963,4.963,0,0,0-.15.533,4.384,4.384,0,0,0-.14.494c-0.03.175-.03,0.353-0.05,0.529a4.748,4.748,0,0,0-.05.53c0,0.173.03,0.344,0.04,0.516s0.02,0.365.05,0.545a4.346,4.346,0,0,0,.13.5c0.05,0.179.08,0.361,0.14,0.535a4.486,4.486,0,0,0,.23.467,4.9,4.9,0,0,0,.24.5c0.09,0.15.21,0.284,0.31,0.426a4.874,4.874,0,0,0,.34.443l0.27,0.17v0.125l7.73,7.237,7.73-7.237v-0.125l0.27-.17a4.874,4.874,0,0,0,.34-0.443c0.1-.142.22-0.276,0.31-0.426a4.9,4.9,0,0,0,.24-0.5,4.486,4.486,0,0,0,.23-0.467c0.06-.174.09-0.356,0.14-0.535a4.346,4.346,0,0,0,.13-0.5c0.03-.18.03-0.363,0.05-0.545s0.04-.343.04-0.516a4.748,4.748,0,0,0-.05-0.53C1589.91,160.842,1589.91,160.664,1589.88,160.489Z"
-                                  transform="translate(-1569 -154)"/>
-                        </svg>
-                    </a>
-                    <a href="{% url 'general:cart_page' %}" title="Корзина" class="basket">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 22">
-                            <path d="M1655.99,156.1h2.41l4.96,12.947a1.035,1.035,0,0,0,.97.672h10.43a1.043,1.043,0,0,0,.97-0.659l4.17-10.476a1.052,1.052,0,0,0-.97-1.436h-13.55v2.095h12.01l-3.34,8.381h-9l-4.96-12.948a1.036,1.036,0,0,0-.97-0.671h-3.13V156.1Zm7.3,17.81a2.085,2.085,0,1,1,2.09,2.095A2.089,2.089,0,0,1,1663.29,173.905Zm8.34,0a2.085,2.085,0,1,1,2.09,2.095A2.1,2.1,0,0,1,1671.63,173.905Z"
-                                  transform="translate(-1656 -154)"/>
-                        </svg>
-                        <span class="counter">
-                            {% if cart_items %}
-                                {{ cart_items }}
-                            {% else %}
-                                0
-                            {% endif %}
-                        </span>
-                    </a>
-                {% endif %}
-
-
-            </div>
         </div>
 
         <ul class="lang-switcher desktop">
@@ -303,4 +323,8 @@
         </ul>
     </div>
 </div>
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"
+></script>
 <!--<div class="alert alert-success beta"><span>{% trans "Сайт работает в тестовом режиме" %}</span></div>-->
