--- a/templates/pages/appliedart-types.html
+++ b/templates/pages/appliedart-types.html
@@ -7,7 +7,7 @@
 
 {% block main %}
     <div class="wrapper">
-        <div class="container">
+        <div class="">
             {% include 'header.html' with cart_items=cart_items craftmanship=craftmanship country_name=country_name%}
             <main class="content">
                 <div class="center genres-page">
