--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 <div class="wrapper">
-    <div class="container">
+    <div class="">
         {% include 'header.html' with cart_items=cart_items craftmanship=craftmanship country_name=country_name%}
         <main class="content artists-page" style="margin-top: 50px;">
             <div class="center">
