--- a/templates/pages/catalog-detail.html
+++ b/templates/pages/catalog-detail.html
@@ -11,7 +11,7 @@
 {% block main %}
 
     <div class="wrapper">
-        <div class="container">
+        <div class="">
             {% include 'header.html' with cart_items=cart_items craftmanship=craftmanship country_name=country_name work=work%}
             <main class="content">
                 <div class="center">
