--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -22,7 +22,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="container">
+        <div class="">
             {% include 'header.html' with cart_items=cart_items craftmanship=craftmanship country_name=country_name%}
             <main class="content">
                 <div class="profile-page">
