fixed the title for template

--- a/templates/pages/publishing_house.html
+++ b/templates/pages/publishing_house.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% block title %}
-{% trans "Service Detail" %}
+{% trans "Издательский дом" %}
 {% endblock title %}
 
 {% block main %}
