--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -31,7 +31,7 @@
                     <strong><a href="{{ main.slug }}">{{ main.title }}</a> </strong>
                     <span>{{ main.pub_date }}</span>
                   </div>
-                  {{ main.description }}
+                  {{ main.description|safe|truncatechars:150 }}
                 </div>
           </div>
         {% endfor %}
